--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.3",
+    "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7",
     "react-router-dom": "^5.2.0",
     "uuid": "^8.3.2"
